# ai_dm

./: .gitignore  AI_agent_tutorial.ipynb  AI_agents_tutorial.ipynb  README.md  agent_utils.py  ai_dm_tutorial.ipynb  behavioral_cloning.py  deep_policy_gradient.py  learning_agent.py  mc_agents.py  policy_gradient.py  setup.cfg  setup.py  td_agents.py  test_agents.py  test_utils.py  train.py  train_and_evaluate.py
AI_agents/RL/: behavioral_cloning.py
AI_agents/Search/: best_first_search.py  constraint.py  defs.py  heuristic.py  problem.py  utils.py
AI_agents/Tests/: test_multi_taxi.py  test_taxi.py
Environments/: gym_problem.py
RL/: behavioral_cloning.py  deep_policy_gradient.py
Search/: best_first_search.py  design.py  problem.py  search.py  search_utils.py  utils.py
Tests/: test_taxi.py
ai_dm/Base/: comp_resources.py  problem.py
ai_dm/Environments/: environment.py  gymnasium_compat_wrapper.py  mdp.py
ai_dm/RL/: policy_gradient.py  q-learning.py  q_learning.py
ai_dm/Search/: best_first_search.py  constraint.py  heuristic.py  mcts.py  utils.py
ai_dm/Tests/: RL_Introduction.ipynb  ai_dm_tutorial_with_rl.ipynb  test_grid.py  test_rl.py  test_taxi.py
ai_dm/backup/: behavioral_cloning.py  train_and_evaluate.py
ai_dm/base/: comp_resources.py  problem.py
environments/: environment.py  mdp.py
environments/abstractions/: environment_transforms.py  taxi_abstractions.py
environments/gridworld/: gridworld.py  gridworld_utils.py
environments/transforms/: environment_transforms.py
particle_env/: particle_env_helpers.py
(+11 files in other folders)
