[metadata]
name = AI-agents
version = 0.0.0
author = Sarah Keren
author_email = sarahk@technion.ac.il
description = Various AI agents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sarah-keren/AI_agents
keywords = AI, search, planning, RL
classifiers =
    'License :: OSI Approved :: MIT License'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: Implementation :: CPython'
    'Programming Language :: Python :: Implementation :: PyPy'

[options]
packages = find:
python_requires = >=3.6
install_requires =
    gym==0.23.0
    pygame==2.1.2

[options.packages.find]
exclude = Tests